--- a/book_1_template.tex
+++ b/book_1_template.tex
@@ -1057,7 +1057,49 @@ In this section of the guide, you will be learning how to create new wall types,
 		\caption[A Sloped Deck]{Go into a 3d view and edit the slope in the footprint until it reaches the ground. This picture is at \menu{-5'} height offset}
 		\end{marginfigure}
 \end{enumerate}
+
+\chapter{Chapter 8 Creating Stairs and Railings}
+\label{ch:8}
+In this section of the guide you will complete the interior of the house. You will learn more about objects by placing Stairs and Railings
+\begin{enumerate}
+\section{Creating Stairs}
+	\item Enter the view: \menu{Side Bar > Project Browser > Floor Plans > 01 Lower Level}
+	\item Select the tool: \menu{Architecture > Circulation > Stair}
+	\item Use the default stare options, use your current experience to determine whether this is sufficient for your use
+	\item Click and pull until you have created all 18 risers, with an arrow pointing towards the left
+	\item Click finish Sketch
+	\item Use your cursor to move the stairs into a position similar to Figure \ref{fig:revstairinit}
 	
+	\begin{figure}
+		\includegraphics[width=\linewidth]{revitstairsinit.PNG}
+		\caption{The placement of Stairs}
+		\label{fig:revstairinit}
+	\end{figure}
+	
+	\item Move to view:\menu{Side Bar > Project Browser > Floor Plans > 02 Entry Level}
+	\item editing the main floor's footprint, provide a space for the stairs to enter. Reference Figure \ref{fig:revstairspace}
+	
+	\begin{marginfigure}
+		\includegraphics[width=\linewidth]{revitstairspace.png}
+		\caption{A Space in the Floor for Stair}
+		\emph{It's okay if your floor is not as clean cut as this one, it is only your first time, but do you best.}
+		\label{fig:revstairspace}
+	\end{marginfigure}
+	
+	\item Go into 3D mode once done, and select the railing like in figure \ref{fig:revstairrail}
+	
+	\begin{figure}
+		\includegraphics[width=\linewidth]{revitstairraillings.png}
+		\caption{The railings of stairs selected}
+		\emph{You can click through curtain walls to select objects.}
+		\label{fig:revstairrail}
+	\end{figure}
+	
+	\item Change the railing type to: \menu{Railing Guardrail - Pipe }
+	
+\section{Creating Railing}
+
+\end{enumerate}
 	
 		
 
